# ha-meridian-energy

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  release.yml  validate.yml
custom_components/meridian_energy/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  graphql.py  icons.json  manifest.json  models.py  parsers.py  quality_scale.yaml  sensor.py  statistics.py  strings.json  transport.py
custom_components/meridian_energy/translations/: en.json
scripts/: check_module_coverage.py  check_versions.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_coordinator_adaptive.py  test_init.py  test_repository_contracts.py  test_sensor_diagnostics.py  test_statistics.py  test_translations.py
