[project]
name = "ha-meridian-energy"
version = "0.1.0"
description = "Unofficial Meridian Energy integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
license = "MIT"
authors = [{ name = "lafro" }]

[dependency-groups]
dev = [
  "aioresponses>=0.7.8",
  "homeassistant==2026.7.2",
  "mypy>=1.17.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "pytest-homeassistant-custom-component>=0.13.0",
  "ruff>=0.12.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=custom_components.meridian_energy --cov-report=term-missing --cov-fail-under=95"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError"
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "D107",
  "D203",
  "D212",
  "COM812",
  "EM101",
  "EM102",
  "FBT003",
  "ISC001",
  "PERF401",
  "PLR0913",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
  "TRY004",
  "TRY301"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "FBT001", "INP001", "PLR2004", "S", "SLF001"]
"custom_components/meridian_energy/const.py" = ["S105"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
